<resources>
    <string name="app_name">ShoppingList</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="age">Age</string>
    <string name="amountAvailableToSpend">Amount Available to Spend</string>
    <string name="email">Email</string>
    <string name="submitButtonText">Submit</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="description">\?</string>
    <string name="zero">0</string>
    <string name="loadDemoValues">Load Demo Values</string>
    <string name="viewCart">View Cart</string>
    <string name="checkout">Checkout</string>
    <string name="modifyCart">Modify Cart</string>
    <string name="search">search</string>
    <string name="tableHeaderName"><b>Name</b></string>
    <string name="tableHeaderQuantity"><b>Quantity</b></string>
    <string name="tableHeaderVAT"><b>VAT</b></string>
    <string name="tableHeaderPrice"><b>Price</b></string>
    <string name="tableHeaderTotal"><b>Total</b></string>
    <string name="htmlStart"><![CDATA[<!DOCTYPE html><html> <head> <meta charset="UTF-8"> <style type="text/css"> table.gridtable{font-family: verdana, arial, sans-serif; font-size:11px; color:#333333; border-width: 1px; border-color: #666666; border-collapse: collapse;}table.gridtable th{border-width: 1px; padding: 8px; border-style: solid; border-color: #666666; background-color: #dedede;}table.gridtable td{border-width: 1px; padding: 8px; border-style: solid; border-color: #666666; background-color: #ffffff;}table.gridtable tfoot td{border-width: 0px; padding: 8px;}</style> </head> <body> <table class="gridtable"> <tr> <th><b>Name</b> </th> <th><b>Quantity</b> </th> <th><b>VAT</b> </th> <th><b>Price</b> </th> <th><b>Total</b> </th> </tr>]]></string>
    <string name="htmlEnd"><![CDATA[</table></body></html>]]></string>
</resources>