<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
   	<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp" >
		<TableLayout
		    android:id="@+id/purchases"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
			android:stretchColumns="*"
		    tools:ignore="UselessParent"
		    android:padding="5dp">
		    <TableRow android:id="@+id/header">
		        <TextView
		            android:text="@string/tableHeaderName" />
		        <TextView
		            android:text="@string/tableHeaderQuantity" />
		 	        <TextView
		            android:text="@string/tableHeaderVAT" />
		       	<TextView
		            android:text="@string/tableHeaderPrice" />
		       	<TextView
		            android:text="@string/tableHeaderTotal" />
		    </TableRow>
		</TableLayout>
		
		<Button
        android:layout_below="@+id/purchases"
        android:id="@+id/modifyCart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text ="@string/modifyCart"
        android:layout_marginBottom="20dp"  />
		
		<Button
        android:layout_below="@+id/modifyCart"
        android:id="@+id/checkout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text ="@string/checkout"  />
	</RelativeLayout>
</ScrollView>
