<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.customlist.MainActivity" >

   	<Button
   	    style="?android:attr/buttonStyleSmall"
		android:id="@+id/description"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:text="@string/description"
     />
    
	<TextView
	    android:id="@+id/item"
   		android:layout_toRightOf="@+id/description"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
	
	<TextView
	    android:id="@+id/price"
	    android:layout_below="@+id/item"
	    android:layout_toRightOf="@+id/description"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

	<Button
	    style="?android:attr/buttonStyleSmall"
		android:id="@+id/plus"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:text="@string/plus"
	    android:layout_alignParentRight="true"
	     />
	
	<TextView
	    android:id="@+id/quantity"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/zero"
        android:layout_marginTop="12dp"
		android:layout_toLeftOf="@+id/plus" />
	
	<Button
	    style="?android:attr/buttonStyleSmall"
		android:id="@+id/minus"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:text="@string/minus"
	    android:layout_toLeftOf="@+id/quantity" />
	
</RelativeLayout>